--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,18 +2,30 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Editor 3D AR</title>
+  <title>AR Viewer</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Trascina un file .glb</h1>
-  <div id="dropzone">Trascina qui il tuo file .glb</div>
-  <input type="file" id="fileInput" accept=".glb" />
-  <model-viewer id="viewer" ar ar-modes="webxr scene-viewer quick-look"
-    camera-controls auto-rotate shadow-intensity="1" style="width: 100%; height: 500px;">
+
+  <h1>Trascina un file .glb (Android) o .usdz (iOS)</h1>
+
+  <div id="dropzone">
+    <p>Trascina qui il tuo file 3D</p>
+    <p class="hint">Supporta .glb per Android e .usdz per iOS</p>
+  </div>
+
+  <model-viewer id="viewer"
+    ar
+    ar-modes="webxr scene-viewer quick-look"
+    camera-controls
+    auto-rotate
+    shadow-intensity="1"
+    style="width: 100%; height: 500px;">
   </model-viewer>
+
   <div id="qr"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
